2007-10-19  Gary Burton <gary.burton@zen.co.uk>
	* src/DisplayTabs/_EmbeddedList.py:
	* src/DisplayTabs/_ButtonTab.py:
	ENTER is edit on embedded lists, issue #1296

2007-10-18  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/BasicUtils/_NameDisplay.py: bug in making patterns with uppercase

2007-10-18  Benny Malengier  <benny.malengier@gramps-project.org>
	* src/DisplayTabs/__init__.py: add note backref
	* src/glade/gramps.glade: add notebook to note editor to show backref
	* src/DisplayTabs/_NoteTab.py: import editnote in method to avoid import loop
	* src/Editors/_EditNote.py: add notetab of backreferences
	* src/DisplayTabs/_NoteBackRefList.py: note backreferences list
	* src/DisplayTabs/Makefile.am: new backref file
	* po/POTFILES.in: new backref file

2007-10-18  Benny Malengier  <benny.malengier@gramps-project.org>
	* src/DisplayModels/_BaseModel.py: remove comments
	* src/DisplayModels/_NoteModel.py: show all notes again in note view

2007-10-17 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/GrampsDbUtils/_WriteGedcom.py: bug get_phon must be get_phone

2007-10-17  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/Calendar.py: changed exp eval char to '>'
	* src/plugins/holidays.xml: added easter and ash wed eval's

2007-10-17  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/gen/lib/date.py: added method Date.offset(value) -> (y,m,d)

2007-10-16  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py (PersonView.delete_person_response): 
	use gen.utils.delete_person_from_database

2007-10-16  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/Calendar.py: Fixed bug with maiden names, added some support for selecting name formats

2007-10-16  Gary Burton <gary.burton@zen.co.uk>
	* src/plugins/NarrativeWeb.py: 0001267: Web report and shared event

2007-10-16  Frederik De	Richter <frederik.de.richter@googlemail.com>
	* src/plugins/rel_nl.py: new version

2007-10-15  Douglas S. Blank  <dblank@cs.brynmawr.edu>